# codebeacon

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.zh-CN.md  codebeacon.yaml.example  public-plan.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
codebeacon/: __main__.py  cache.py  cli.py  config.py  wave.py
codebeacon/common/: filters.py  symbols.py  types.py
codebeacon/contextmap/: generator.py
codebeacon/discover/: detector.py  scanner.py
codebeacon/export/: mcp.py  obsidian.py
codebeacon/extract/: __init__.py  base.py  components.py  dependencies.py  entities.py  routes.py  semantic.py  services.py
codebeacon/extract/queries/: README.md  actix.scm  angular.scm  aspnet.scm  django.scm  express.scm  fastapi.scm  flask.scm  gin.scm  ktor.scm  laravel.scm  nestjs.scm  rails.scm  react.scm  spring_boot.scm  svelte.scm  tauri.scm  vapor.scm  vue.scm
codebeacon/graph/: __init__.py  analyze.py  build.py  cluster.py  enrich.py
codebeacon/skill/: SKILL.md
codebeacon/wiki/: generator.py  index.py  templates.py
docs/: TRANSLATION_STATUS.md
skill/: install.py
tests/: conftest.py  test_discover.py  test_entities.py  test_filters.py  test_graph.py  test_resolve.py  test_routes.py  test_services.py  test_wiki.py
tests/fixtures/actix/: main.rs
tests/fixtures/angular/: app.component.ts
tests/fixtures/aspnet/: UserController.cs
tests/fixtures/django/: views.py
tests/fixtures/express/: userRouter.js
tests/fixtures/fastapi/: main.py
tests/fixtures/flask/: app.py
tests/fixtures/gin/: main.go
tests/fixtures/ktor/: UserRoutes.kt
tests/fixtures/laravel/: UserController.php
tests/fixtures/nestjs/: user.controller.ts
tests/fixtures/rails/: users_controller.rb
tests/fixtures/react/: UserPage.tsx
tests/fixtures/sveltekit/: +page.svelte
(+3 files in other folders)
