[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codebeacon"
version = "0.1.6"
description = "Source code AST analysis tool for AI context generation — unified multi-framework knowledge graph"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["codebase", "ast", "knowledge-graph", "claude", "ai-context", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "pyyaml>=6.0",
    "networkx>=3.0",
    "tree-sitter>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-kotlin>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-ruby>=0.23",
    "tree-sitter-php>=0.23",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-swift>=0.0.1",
    "tree-sitter-html>=0.23",
    "tree-sitter-svelte>=0.23",
]

[project.scripts]
codebeacon = "codebeacon.cli:main"

[project.optional-dependencies]
cluster = ["graspologic>=1.0"]
dev     = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/codebeacon/codebeacon"
Repository = "https://github.com/codebeacon/codebeacon"
Issues = "https://github.com/codebeacon/codebeacon/issues"

[tool.hatch.build.targets.wheel]
packages = ["codebeacon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
